--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -79,7 +79,7 @@
   <ItemGroup>
     <Compile Include="Dialogs\RootDialog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserManager.cs" />
+    <Compile Include="LearnersManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
