--- a/LearningMan.Tests/LearningMan.Tests.csproj
+++ b/LearningMan.Tests/LearningMan.Tests.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAL.Tests.cs" />
+    <Compile Include="LearnersManager.Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
