--- a/BLL/packages.config
+++ b/BLL/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net462" />
   <package id="Chronic.Signed" version="0.3.2" targetFramework="net462" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.Bot.Builder" version="3.8.1.0" targetFramework="net462" />
