--- a/LearningMan/packages.config
+++ b/LearningMan/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net462" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net462" />
   <package id="Chronic.Signed" version="0.3.2" targetFramework="net46" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Razor" version="3.1.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
