MongoDB is used now. Adding / reading works

--- a/LearningMan/Web.config
+++ b/LearningMan/Web.config
@@ -9,10 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
+    <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password
     <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="MicrosoftAppId" value="b332574b-e569-41b5-8e2e-b3cc0004a823" />
+    <add key="MicrosoftAppPassword" value="V0ow6uWYGwSsUf9MGwwj3hx" />-->
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
