--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -85,8 +85,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ILearnersService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="LearnersManager.cs" />
+    <Compile Include="LearnersService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
